Fix hover in collections overflow

--- a/apps/chat/web/styles/society-pro-chat.css
+++ b/apps/chat/web/styles/society-pro-chat.css
@@ -222,8 +222,8 @@ sopro-subscribers-dropdown{
 }
 
 .poo-highlight-collection, .poo-highlight-subscriber {
-  background-color: rgba(131, 131, 131, 1);
-  color: rgba(0, 0, 0, 1) !important;
+  background-color: rgba(131, 131, 131, 1) !important;
+  color: rgba(255,255,255,0.8) !important;
 }
 
 
